⚒️refactor format ⚠️fix dependency vulnerability

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -4,7 +4,7 @@ body {
 
 hr {
     width: 90%;
-    margin: 0px auto;
+    margin: 0 auto;
     height: 2px;
     border: none;
     background-image: linear-gradient(90deg, transparent 0%, #3f3f3f 50%, transparent 100%);
@@ -17,19 +17,19 @@ input {
 }
 
 button.action {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     background-image: linear-gradient(135deg, #FDEB71 10%, #F8D800 100%);
     transition: 0.5s;
 }
 
 button.action:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     transform: scale(1.05);
 }
 
 .main {
     width: 95%;
-    margin: 0px auto;
+    margin: 0 auto;
     text-align: center;
 }
 
@@ -52,7 +52,7 @@ button.action:hover {
 
 .main .section hr {
     width: 50%;
-    margin: 0px auto;
+    margin: 0 auto;
     height: 1px;
     border: none;
 }
@@ -60,24 +60,24 @@ button.action:hover {
 
 .minus {
     background-image: linear-gradient(135deg, #EE9AE5 10%, #5961F9 100%);
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     transition: 0.5s;
 }
 
 .minus:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     transform: scale(1.1);
 }
 
 
 .plus {
     background-image: linear-gradient(135deg, #FCCF31 10%, #F55555 100%);
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     transition: 0.5s;
 }
 
 .plus:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     transform: scale(1.1);
 }
 
@@ -103,7 +103,7 @@ button.action:hover {
 }
 
 button.action {
-    margin: 0px 5px;
+    margin: 0 5px;
     padding: 5px 10px;
     border-radius: 5px;
 }
