--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -2,7 +2,7 @@
     width: 90%;
     margin: 0 auto;
     position: relative;
-    padding: 0.5rem 0px;
+    padding: 0.5rem 0;
     text-align: center;
 }
 
