--- a/src/css/components/beats.css
+++ b/src/css/components/beats.css
@@ -10,11 +10,11 @@
     height: var(--size-m);
     border-radius: 50%;
     margin: var(--size-m) calc(var(--size-xxs) * 0.5) 0 calc(var(--size-xxs) * 0.5);
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     background-size: 200% 200%;
     background-repeat: no-repeat;
     background-image: linear-gradient(135deg, #a7a6cb 5%, #8989ba 45%, #FFF720 55%, #3CD500 95%);
-    background-position: 0% 0%;
+    background-position: 0 0;
     transition: 0.1s;
 }
 
@@ -59,7 +59,7 @@
 }
 
 #stress {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     background-size: 200% 200%;
     background-repeat: no-repeat;
     background-image: linear-gradient(135deg, #FFF720 5%, #3CD500 45%, #FFB199 55%, #FF0844 95%);
@@ -67,12 +67,12 @@
 }
 
 #stress:hover {
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     transform: scale(1.1);
 }
 
 .yes {
-    background-position: 0% 0%;
+    background-position: 0 0;
 }
 
 .no {
