--- a/src/css/components/play.css
+++ b/src/css/components/play.css
@@ -4,7 +4,7 @@
     border-radius: 50%;
     font-size: var(--size-m);
     white-space: nowrap;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     background-size: 200% 200%;
     background-repeat: no-repeat;
     background-image: linear-gradient(135deg, #FFF720 5%, #3CD500 45%, #FFB199 55%, #FF0844 95%);
@@ -12,7 +12,7 @@
 }
 
 #play:hover {
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     transform: scale(1.1);
 }
 
@@ -21,6 +21,6 @@
 }
 
 .play {
-    background-position: 0% 0%;
+    background-position: 0 0;
 }
 
