--- a/src/css/components/waveform.css
+++ b/src/css/components/waveform.css
@@ -14,7 +14,7 @@
     margin: var(--size-s) calc(var(--size-xxs) * 0.8) 0 calc(var(--size-xxs) * 0.8);
     padding: var(--size-xs);
     border-radius: 50%;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     background-size: 300% 100%;
     background-repeat: no-repeat;
     background-image: linear-gradient(135deg, #FFF720 5%, #3CD500 45%, #FFB199 55%, #FF0844 95%);
@@ -23,12 +23,12 @@
 }
 
 #wave-list .wave-item:hover {
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     transform: scale(1.1);
 }
 
 #wave-list .wave-item.active {
-    background-position: 0% 0%;
+    background-position: 0 0;
 }
 
 @media (max-width: 480px) {
